<resources>
    <string name="app_name">ProjectB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">User</string>
    <string name="menu_slideshow">Barang</string>
    <string name="menu_tools">Jual</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>
    <string name="log_out">Log Out</string>
    <string name="transaksi">Transaksi</string>
    <string name="master">Master</string>
</resources>
