<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home" />


    <item android:title="@string/master">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_slideshow"
                android:title="@string/menu_slideshow" />
        </menu>
    </item>
    <item android:title="@string/transaksi">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:title="@string/menu_tools" />
        </menu>
    </item>
    <item android:title="Setting">
        <menu>
            <item
                android:id="@+id/logout2"
                android:title="@string/log_out" />
        </menu>
    </item>


</menu>
